@@ -1,7 +1,8 @@
-# Работа №2. Реализация CRUD с помощью SOAP-сервиса
+# Работа №4. Поиск с помощью REST-сервиса
 
 ## Дириктории с артефактами
 1. client - содержит клиент для использования сервиса. Клиент представляет собой консольное приложение
+2. j2ee - содержит j2ee приложение, развертываемое с помощью сервре wildfly
 3. standalone - содержит standalone приложение развертываемое без помощи сервера приложений
 
 ## Подготовка к запуску 
@@ -51,12 +52,45 @@
 ## Запуск и проверка standalone сервиса
 1. Установить JDK 17 и maven последней версии
 2. Освободить порт 8080
-3. `mvn clean install` внутри директории lab2/standalone
-4. `java --add-opens java.base/java.lang=ALL-UNNAMED -jar lab2-standalone.jar` внутри директории lab2/standalone/target (--add-opens java.base/java.lang=ALL-UNNAMED необходим, так как все зависимости jax-ws устарели, а в JDK 17 изменилось API)
-5. `mvn clean install` внутри директории lab2/client
-6. `java --add-opens java.base/java.lang=ALL-UNNAMED -jar lab2-client.jar http://localhost:8080/HeroService?wsdl` внутри директории lab2/client/target 
-7. Воспользоваться командой `help`
+3. `mvn clean install` внутри директории lab4/standalone
+4. `java -jar lab4-standalone.jar` внутри директории lab4/standalone/target
+5. `mvn clean install` внутри директории lab4/client
+6. `java -jar lab4-client.jar http://localhost:8080/api/v1/hero` внутри директории lab4/client/target 
+7. Воспользоваться командой `help` и командой `listHeroes`
 8. Для написания RSQL предикатов можно воспользоваться README из библиотеки https://github.com/jirutka/rsql-parser. Поддержаны логические операторы AND и OR, а также операторы сравнения `==`, `!=`, `=lt=`, `=le=`, `=gt=`, `=ge=`.
+
+## Запуск и проверка j2ee сервиса
+1. Установить JDK 17 и maven последней версии
+2. Скачать и распоковать Wildfly 26.1.3.Final https://www.wildfly.org/downloads/
+3. Запустить Wildfly
+4. С помощью `<wildfly-dir>/bin/add-user.bat` создать пользователя для консоли управления Wildfly
+5. Скачать драйвер PostgreSQL в виде jar https://jdbc.postgresql.org/download/ (Java 8)
+6. Поместить .jar драйвера в `<wildfly-dir>/standalone/deployment`
+7. Добавить datasource с именем `java:/PostgresDS`. Можно сделать через консоль управления, а можно изменив файл `<wildfly-dir>/standalone/configuration/standalone.xml` добавив в раздел <datasources> следующую запись:
+```
+<datasource jndi-name="java:/PostgresDS" pool-name="PostgresDS">
+    <connection-url>jdbc:postgresql://localhost:5432/postgres</connection-url>
+    <driver-class>org.postgresql.Driver</driver-class>
+    <driver>postgresql-42.7.4.jar</driver>
+    <security>
+        <user-name>postgres</user-name>
+        <password>postgres</password>
+    </security>
+    <validation>
+        <valid-connection-checker class-name="org.jboss.jca.adapters.jdbc.extensions.postgres.PostgreSQLValidConnectionChecker"/>
+        <validate-on-match>true</validate-on-match>
+        <exception-sorter class-name="org.jboss.jca.adapters.jdbc.extensions.postgres.PostgreSQLExceptionSorter"/>
+    </validation>
+</datasource>
+```
+8. Освободить порт 8080
+9. `mvn clean install` внутри директории lab4/j2ee
+10. Задеплоить `lab4-j2ee.war` 
+11. `mvn clean install` внутри директории lab4/client
+12. `java -jar lab4-client.jar http://localhost:8080/lab4-j2ee/api/v1/hero` внутри дирикетории lab4/client/target
+14. Воспользоваться командой `help` и командой `listHeroes`
+15. Для написания RSQL предикатов можно воспользоваться README из библиотеки https://github.com/jirutka/rsql-parser. Поддержаны логические операторы AND и OR, а также операторы сравнения `==`, `!=`, `=lt=`, `=le=`, `=gt=`, `=ge=`.
+
 
 ## Примеры RSQL предикатов для тестирования:
 1. `melee==true` -- получить всех героев ближнего боя
